--- a/web/src/assets/styles/variables/_spacing.scss
+++ b/web/src/assets/styles/variables/_spacing.scss
@@ -3,6 +3,7 @@ $spacing_1: 2px;
 $spacing_2: 3px;
 $spacing_3: 4px;
 $spacing_4: 5px;
+$spacing_5: 6px;
 $spacing_6: 8px;
 $spacing_8: 10px;
 $spacing_10: 12px;
