--- a/web/src/assets/styles/mixins/_fonts.scss
+++ b/web/src/assets/styles/mixins/_fonts.scss
@@ -3,3 +3,12 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+@mixin line-clamp($lines: 1) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-clamp: $lines;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+}
