--- a/web/src/assets/styles/mixins/_fonts.scss
+++ b/web/src/assets/styles/mixins/_fonts.scss
@@ -1,4 +1,4 @@
-@mixin gradient-text() {
+@mixin gradient-text($color_1: $primary_5, $color_2: $primary_4) {
     background: -webkit-linear-gradient(45deg, $primary_5, $primary_4);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -11,4 +11,13 @@
     line-clamp: $lines;
     -webkit-line-clamp: $lines;
     -webkit-box-orient: vertical;
+}
+
+@mixin not-selectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
