--- a/web/src/assets/styles/variables/_animations.scss
+++ b/web/src/assets/styles/variables/_animations.scss
@@ -3,3 +3,30 @@ $animation__duration: 0.2s;
 $transition: all $animation__duration ease-in-out;
 
 $transition_spring: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+@keyframes bar-loading {
+    0% {
+        left: 0px;
+        width: 10%;
+    }
+
+    15% {
+        left: 0px;
+        width: 100%;
+    }
+
+    50% {
+        left: 90%;
+        width: 10%;
+    }
+
+    75% {
+        left: 0%;
+        width: 100%;
+    }
+
+    100% {
+        left: 0px;
+        width: 10%;
+    }
+}
