--- a/web/src/assets/styles/variables/_spacing.scss
+++ b/web/src/assets/styles/variables/_spacing.scss
@@ -20,5 +20,6 @@ $spacing_64: 80px;
 $border_r_xs: 2px;
 $border_r_sm: 3px;
 $border_r_md: 6px;
+$border_r_mdx: 8px;
 $border_r_lg: 10px;
 $border_r_xl: 15px;
