finish document editor

--- a/web/src/assets/styles/variables/_sizes.scss
+++ b/web/src/assets/styles/variables/_sizes.scss
@@ -8,6 +8,8 @@ $button_icon_large: 20px;
 
 $sign_main_width: 400px;
 
+$select_input_height: 34px;
+
 $text_input_height: 38px;
 $text_input_icon_size: 20px;
 $text_input_warn_height: 17px;
