--- a/web/src/assets/styles/variables/_animations.scss
+++ b/web/src/assets/styles/variables/_animations.scss
@@ -30,3 +30,13 @@ $transition_spring: cubic-bezier(0.175, 0.885, 0.32, 1.275);
         width: 10%;
     }
 }
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
